[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.0.5" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
rustreexo = { version = "0.3.0", features = ["with-serde"] }
bitcoin = { version = "0.31.2", features = ["std", "rand-std", "serde"] }
bincode = "1.3.3"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
clap = { version = "4.5.16", features = ["derive"] }
txoutset = "0.3.0"
sha2 = "0.10.8"
bitcoin_hashes = "0.14.0"
k256 = { version = "0.13.3", features = ["serde"] }
