[package]
name = "method"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.0.5", default-features = false, features = ['std'] }
rustreexo = { version = "0.3.0", features = ["with-serde"] }
serde = "1.0"
bitcoin = { version = "0.32.2", features = ["serde"] }
