[package]
name = "method"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.0.5", default-features = false, features = ['std'] }
rustreexo = { version = "0.3.0", features = ["with-serde"] }
serde = "1.0"
bitcoin = { version = "0.32.2", features = ["serde"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
sha2 = "0.10.8"
k256 = { version = "=0.13.3", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa", "pkcs8", "schnorr"], default-features = false }

# TODO: use risc0 optimized version of k256
